feat: remove files